Removed some comments

--- a/report.ipynb
+++ b/report.ipynb
@@ -18,8 +18,7 @@
    "metadata": {},
    "source": [
     "<a id='introduction'></a>\n",
-    "## Introduction\n",
-    "> In this report, I'll be investigating a dataset containing information about *approximately* 10,000 movies collected from The Movie Database (TMDb) to answer some questions. This is not endorsed or certified by TMDb."
+    "## Introduction"
    ]
   },
   {
@@ -1744,8 +1743,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Again, graphing a **histogram** to visualize the distribution of a large number of observations.\n",
-    "> \n",
     "> After grouping all our dataset by genre, an adjusted value of average popularity was mathmaticaly calculated for each genre.\n",
     "> \n",
     "> *'Comedy'* and *'Drama'* genres are once again **more** superior than any other genre."
